Fix the table page style so that it defaults to left align, also define a specific css rule for it

--- a/base/static/default_style.css
+++ b/base/static/default_style.css
@@ -155,6 +155,10 @@ a, a:hover {
     background-color: white;
 }
 
+.bottom-section-table {
+    background-color: white;
+}
+
 /* left align thumbnail text */
 .caption p {
     text-align: left;
